# DGFEM1D

./: .gitignore  CMakeLists.txt  README.md  TwoElement.m  configFile_.txt  debug.txt  output-DG_1F_vStar.txt  output-cfem_1D.txt  output.txt  output_0.txt  solver
InhomogeneousFiles/cl-2.5_np1025/: initial_values_0.txt  initial_values_2.txt  initial_values_3.txt  initial_values_4.txt
LayeredFiles/NN/: NN5L_1.txt
src/: CMakeLists.txt  Configuration.cpp  Configuration.h  Target.filters  Target.sln  Target.vcxproj  Target.vcxproj.filters  configFile.txt  configFileMM.txt  debug.txt  debug_b.txt  dg_fem_postprocess.ipynb  main.cpp  output_0.txt  output_1.txt
src/InhomogeneousFiles/cl-2.5_np1025/: initial_values_1.txt
src/util/: Configuration.cpp  Configuration.h  Dims.h  FileIOMacros.h  InhomogeousField.cpp  InhomogeousField.h  LAFuncs.h  LAfuncs.cpp  LAfuncs.h  LAfuncsFinalStep.cpp  LAfuncsFinalStep.h  LAfuncsFixed.cpp  LAfuncsFixed.h  LayeredProperties.cpp  LayeredProperties.h  OneDimensionalElement.cpp  OneDimensionalElement.h  RandomVariable.cpp  RandomVariable.h  commonMacros.h  globalFunctions.cpp  globalFunctions.h  globalMacros.cpp  globalMacros.h  globalTypesClasses.cpp  globalTypesClasses.h
